Fix visual issues with some blocks when enrollment visibility is enabled

--- a/src/js/block-visibility/editor.scss
+++ b/src/js/block-visibility/editor.scss
@@ -8,8 +8,13 @@
 .llms-block-visibility {
     margin-left: auto;
     margin-right: auto;
-    max-width: 630px;
+    max-width: 840px; // Default max width for a `.wp-block` as configured by the WP core.
 	position: relative;
+
+	> *:first-child {
+		margin-bottom: 28px;
+		margin-top: 28px;
+	}
 
 	&:before {
 		border: 1px solid #e0e0e0;
